Source/Native/nanosockets.h


	typedef int64_t NanoSocket;


	typedef enum _NanoStatus {
		NANOSOCKETS_STATUS_OK = 0,
		NANOSOCKETS_STATUS_ERROR = -1
	} NanoStatus;


	typedef struct _NanoAddress {
		union {
			struct in6_addr ipv6;
			struct {
				uint8_t zeros[10];
				uint16_t ffff;
				struct in_addr ip;
			} ipv4;
		};
		uint16_t port;
	} NanoAddress;


	NANOSOCKETS_API int nanosockets_send(NanoSocket, const NanoAddress*, const uint8_t*, int);


	NANOSOCKETS_API int nanosockets_receive(NanoSocket, NanoAddress*, uint8_t*, int);


	NANOSOCKETS_API int nanosockets_receive_offset(NanoSocket, NanoAddress*, uint8_t*, int, int);


	NANOSOCKETS_API NanoStatus nanosockets_address_get(NanoSocket, NanoAddress*);


	NANOSOCKETS_API NanoStatus nanosockets_address_is_equal(const NanoAddress*, const NanoAddress*);


	NANOSOCKETS_API NanoStatus nanosockets_address_set_ip(NanoAddress*, const char*);


	NANOSOCKETS_API NanoStatus nanosockets_address_get_ip(const NanoAddress*, char*, int);


	NANOSOCKETS_API NanoStatus nanosockets_address_set_hostname(NanoAddress*, const char*);


	NANOSOCKETS_API NanoStatus nanosockets_address_get_hostname(const NanoAddress*, char*, int);


	int nanosockets_send(NanoSocket socket, const NanoAddress* address, const uint8_t* buffer, int bufferLength) {
		struct sockaddr_in socketAddress = { 0 };

		if (address != NULL) {
			socketAddress.sin_family = AF_INET;
			socketAddress.sin_addr = address->ipv4.ip;
			socketAddress.sin_port = NANOSOCKETS_HOST_TO_NET_16(address->port);
		}

		return sendto(socket, (const char*)buffer, bufferLength, 0, (address != NULL ? (struct sockaddr*)&socketAddress : NULL), sizeof(socketAddress));
	}


	int nanosockets_receive(NanoSocket socket, NanoAddress* address, uint8_t* buffer, int bufferLength) {
		struct sockaddr_storage addressStorage = { 0 };
		socklen_t addressLength = sizeof(addressStorage);

		int socketBytes = recvfrom(socket, (char*)buffer, bufferLength, 0, (struct sockaddr*)&addressStorage, &addressLength);

		if (address != NULL)
			nanosockets_address_extract(address, &addressStorage);

		return socketBytes;
	}


	int nanosockets_receive_offset(NanoSocket socket, NanoAddress* address, uint8_t* buffer, int offset, int bufferLength) {
		return nanosockets_receive(socket, address, buffer + offset, bufferLength);
	}


	NanoStatus nanosockets_address_get(NanoSocket socket, NanoAddress* address) {
		struct sockaddr_storage addressStorage = { 0 };
		socklen_t addressLength = sizeof(addressStorage);

		if (getsockname(socket, (struct sockaddr*)&addressStorage, &addressLength) == -1)
			return NANOSOCKETS_STATUS_ERROR;

		nanosockets_address_extract(address, &addressStorage);

		return NANOSOCKETS_STATUS_OK;
	}


	NanoStatus nanosockets_address_is_equal(const NanoAddress* left, const NanoAddress* right) {
		if (memcmp(left, right, sizeof(struct in6_addr)) == 0 && left->port == right->port)
			return NANOSOCKETS_STATUS_OK;
		else
			return NANOSOCKETS_STATUS_ERROR;
	}


	NanoStatus nanosockets_address_set_ip(NanoAddress* address, const char* ip) {
		int type = AF_INET6;
		void* destination = &address->ipv6;

		if (strchr(ip, ':') == NULL) {
			type = AF_INET;

			memset(address, 0, sizeof(address->ipv4.zeros));

			address->ipv4.ffff = 0xFFFF;
			destination = &address->ipv4.ip;
		}

		if (!inet_pton(type, ip, destination))
			return NANOSOCKETS_STATUS_ERROR;

		return NANOSOCKETS_STATUS_OK;
	}


	NanoStatus nanosockets_address_get_ip(const NanoAddress* address, char* ip, int ipLength) {
		if (address->ipv4.ffff == 0xFFFF && nanosockets_array_is_zeroed(address->ipv4.zeros, sizeof(address->ipv4.zeros)) == 0) {
			if (inet_ntop(AF_INET, &address->ipv4.ip, ip, ipLength) == NULL)
				return NANOSOCKETS_STATUS_ERROR;
		} else if (inet_ntop(AF_INET6, &address->ipv6, ip, ipLength) == NULL) {
			return NANOSOCKETS_STATUS_ERROR;
		}

		return NANOSOCKETS_STATUS_OK;
	}


	NanoStatus nanosockets_address_set_hostname(NanoAddress* address, const char* name) {
		struct addrinfo addressInfo = { 0 }, *result = NULL, *resultList = NULL;

		addressInfo.ai_family = AF_UNSPEC;

		if (getaddrinfo(name, NULL, &addressInfo, &resultList) != 0)
			return NANOSOCKETS_STATUS_ERROR;

		for (result = resultList; result != NULL; result = result->ai_next) {
			if (result->ai_addr != NULL && result->ai_addrlen >= sizeof(struct sockaddr_in)) {
				if (result->ai_family == AF_INET) {
					struct sockaddr_in* socketAddress = (struct sockaddr_in*)result->ai_addr;

					memset(address, 0, sizeof(address->ipv4.zeros));

					address->ipv4.ffff = 0xFFFF;
					address->ipv4.ip.s_addr = socketAddress->sin_addr.s_addr;

					freeaddrinfo(resultList);

					return NANOSOCKETS_STATUS_OK;
				} else if (result->ai_family == AF_INET6) {
					struct sockaddr_in6* socketAddress = (struct sockaddr_in6*)result->ai_addr;

					address->ipv6 = socketAddress->sin6_addr;

					freeaddrinfo(resultList);

					return NANOSOCKETS_STATUS_OK;
				}
			}
		}

		if (resultList != NULL)
			freeaddrinfo(resultList);

		return nanosockets_address_set_ip(address, name);
	}


	NanoStatus nanosockets_address_get_hostname(const NanoAddress* address, char* name, int nameLength) {
		struct sockaddr_in6 socketAddress = { 0 };

		socketAddress.sin6_family = AF_INET6;
		socketAddress.sin6_addr = address->ipv6;
		socketAddress.sin6_port = NANOSOCKETS_HOST_TO_NET_16(address->port);

		int error = getnameinfo((struct sockaddr*)&socketAddress, sizeof(socketAddress), name, nameLength, NULL, 0, NI_NAMEREQD);

		if (!error) {
			if (name != NULL && nameLength > 0 && !memchr(name, '\0', nameLength))
				return NANOSOCKETS_STATUS_ERROR;

			return NANOSOCKETS_STATUS_OK;
		}

		if (error != EAI_NONAME)
			return NANOSOCKETS_STATUS_ERROR;

		return nanosockets_address_get_ip(address, name, nameLength);
	}